@@ -1,4 +1,7 @@
 
+2009-03-29 16:24 Ali aliov@xfce.org 
+	 * : Added option to reload panel brightness plugin
+
 2009-03-29 16:01 Ali aliov@xfce.org 
 	 * : Show an adapter icon if no battery device found and user select to always show icon
 
